# bag-of-holding

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  supervisord.conf
backend/: alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/versions/: add_action_log.py  add_coin_source.py
backend/app/: main.py
backend/app/api/: __init__.py  action_logs.py  characters.py  coins.py  containers.py  items.py  players.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 203135acc0bb_sync_models_for_sqlite.py  27b98c692973_create_coins_table.py  ac81bdb56dd2_action_log.py  d79eae647ee7_drop_and_recreate_characters_table_as_.py  fix_container_charid_str.py
backend/app/models/: __init__.py  action_log.py  character.py  coin.py  container.py  currency.py  item.py  player.py  transaction.py
backend/app/schemas/: action_log.py  character.py  coin.py  container.py  item.py  player.py
frontend/: .env.development  .env.production  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  types.ts
frontend/src/components/admin/: AdminPanel.tsx
frontend/src/components/characters/: CharacterEditDialog.tsx  CharacterForm.tsx  CharacterInventoryPage.tsx  CharacterList.tsx  CharacterPage.tsx  useCharacters.ts
frontend/src/components/common/: ActionLogTimeline.tsx
frontend/src/services/: actionLogApi.ts  characterApi.ts  coinApi.ts  containerApi.ts  itemApi.ts  playerApi.ts
(+30 files in other folders)
