
[tool.poetry]
name = "bag-of-holding-backend"
version = "0.1.0"
description = "DnD Inventory Management Backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.116.1"}
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.10.1"
aiosqlite = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "python-dotenv (>=1.1.1,<2.0.0)"
]
